# NUTS-CLIENT

./: .gitignore  CNAME  README.md  _config.yml  docker-compose 2.yml  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
.github/workflows/: release.yaml
server/: README.md  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/client/: layout.tsx  page.tsx
src/app/client/explorer/: layout.tsx  page.tsx
src/app/client/settings/: layout.tsx  page.tsx
src/components/: AuthDialog.tsx  Icons.tsx  RootWrapper.tsx
src/components/devtools/: reduxTool.tsx
src/components/settings/: optionWrapper.tsx
src/components/sidebar/: sidebar.tsx
src/components/sidebar/explorer/: explorer.tsx
src/components/titlebar/: titlebar.tsx  utils.ts
src/components/titlebar/manageIcons/: winlike.tsx
src/components/ui/: badge 2.tsx  card.tsx  context-menu.tsx  dialog.tsx  menubar.tsx  select.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/redux/: store.ts
src/redux/slices/: projectFile.ts  windowProperties.ts
src/services/: fileManager.ts  logging.ts  natsWrapper.ts  updateCheck.ts  utils.ts
src/types/: Auth.ts  ProjectFile.ts  Settings.ts  UpdateStuff.ts
